--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Mission to Mars</title>
 </head>
 <body>
     <header class="title">
@@ -18,13 +19,13 @@
     </section>
     <section class="about_explioration">
         <h2>Exploration of Mars</h2>
-        <p>The exploration of Mars has been a goal of national space programs for decades. Conceptual work for missions that would involve human explorers has been ongoing since <b>the 1950s</b>, with planned missions typically being stated as taking place anywhere between 10 and 30 years from the time they are drafted.The list of <b>crewed</b> Mars mission plans shows the various mission proposals that have been put forth by multiple organizations and space agencies in this field of space exploration. Plans have varied from scientific expeditions, in which a small group (between two and eight astronauts) would visit Mars for a period of a few weeks or year, to a continuous presence (e.g. through research stations, colonization or other continuous humanization).[citation needed] Virtual visits to Mars, using haptic technologies, have also been proposed.[
+        <p>The exploration of Mars has been a goal of national space programs for decades. Conceptual work for missions that would involve human explorers has been ongoing since <b>the 1950s</b>, with planned missions typically being stated as taking place anywhere between 10 and 30 years from the time they are drafted.The list of <b>crewed</b> Mars mission plans shows the various mission proposals that have been put forth by multiple organizations and space agencies in this field of space exploration. Plans have varied from scientific expeditions, in which a small group (between two and eight astronauts) would visit Mars for a period of a few weeks or year, to a continuous presence (e.g. through research stations, colonization or other continuous humanization).[citation needed] Virtual visits to Mars, using haptic technologies, have also been proposed.[<br>
             In the 2010s, numerous US, European, and Asian agencies were developing proposals for human missions to Mars.[citation needed] In fiction, Mars is a frequent target of exploration and settlement in books, graphic novels, and films.
             </p>
     </section>
-    <section class="count_shuttles">
-        <h2>Mars shuttles</h2>
-        <p>There are shuttles that was on Mars</p>
+    <section class="shuttles">
+        <h2 class="shuttles_title">Mars shuttles</h2>
+        <p class="shuttles-count">There are shuttles that was on Mars</p>
         <ul>
             <li>Mars 3</li>
             <li>Viking 1 and Viking 2</li>
