--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -13,7 +13,9 @@
     </header>
     <section class="pre_text">
         <p>A human mission to Mars has been the subject of science fiction since the 1880s, and of aerospace engineering and scientific proposals <b>since the late 1940s</b>. Plans include landing on Mars for exploration at a minimum, with some considering exploring its moons Phobos and Deimos. Longterm proposals have included sending settlers and starting terraforming of the planet.</p>
-        <img src="lesson_2_img/people_in_mars.jpg" alt="People on Mars"
+        <img src="lesson_2_img/people_in_mars.jpg" 
+        alt="People on Mars"
+        title="Picture - People on Mars"
         width="320"
         height="160">
     </section>
